[add] added instruction activity and finished exercise list

--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
         <item>Word list</item>
         <item>Picture description</item>
         <item>Sentence reading</item>
-        <item>Syllable repitition</item>
+        <item>Syllable repetition</item>
     </string-array>
 </resources>
