[mod] added minimal pairs and function of the buttons

--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -8,4 +8,302 @@
         <item>Sentence reading</item>
         <item>Syllable repetition</item>
     </string-array>
+    <string-array name="Minimal_Pairs_Fricatives">
+        <item>Vetter</item>
+        <item>Fetter</item>
+        <item>Retter</item>
+        <item>Netter</item>
+        <item>Kaum</item>
+        <item>Saum</item>
+        <item>Baum</item>
+        <item>Schaum</item>
+        <item>Laut</item>
+        <item>Baut</item>
+        <item>Schaut</item>
+        <item>Haut</item>
+        <item>Fall</item>
+        <item>Schall</item>
+        <item>Wall</item>
+        <item>Ball</item>
+        <item>Dein</item>
+        <item>Fein</item>
+        <item>Sein</item>
+        <item>Schein</item>
+        <item>Feld</item>
+        <item>Welt</item>
+        <item>Geld</item>
+        <item>Held</item>
+        <item>Fest</item>
+        <item>Rest</item>
+        <item>Nest</item>
+        <item>West</item>
+        <item>Wie</item>
+        <item>Vieh</item>
+        <item>Nie</item>
+        <item>Sie</item>
+        <item>Wir</item>
+        <item>Vier</item>
+        <item>Tier</item>
+        <item>Bier</item>
+        <item>Fahren</item>
+        <item>Waren</item>
+        <item>Jahren</item>
+        <item>Haaren</item>
+        <item>Sauer</item>
+        <item>Bauer</item>
+        <item>Schauer</item>
+        <item>Mauer</item>
+        <item>Werben</item>
+        <item>Färben</item>
+        <item>Kerben</item>
+        <item>Derben</item>
+        <item>Tasche</item>
+        <item>Tasse</item>
+        <item>Tappe</item>
+        <item>Tanne</item>
+        <item>Richten</item>
+        <item>Fichten</item>
+        <item>Sichten</item>
+        <item>Schichten</item>
+    </string-array>
+    <string-array name="Minimal_Pairs_Stops">
+        <item>Haar</item>
+        <item>Paar</item>
+        <item>Bar</item>
+        <item>Jahr</item>
+        <item>Tank</item>
+        <item>Dank</item>
+        <item>Wank</item>
+        <item>Bank</item>
+        <item>Masse</item>
+        <item>Kasse</item>
+        <item>Gasse</item>
+        <item>Tasse</item>
+        <item>Keule</item>
+        <item>Gäule</item>
+        <item>Säule</item>
+        <item>Beule</item>
+        <item>Jacken</item>
+        <item>Nacken</item>
+        <item>Backen</item>
+        <item>Packen</item>
+        <item>Saaten</item>
+        <item>Daten</item>
+        <item>Taten</item>
+        <item>Raten</item>
+        <item>Baden</item>
+        <item>Bahnen</item>
+        <item>Baten</item>
+        <item>Basen</item>
+        <item>Rohren</item>
+        <item>Rosen</item>
+        <item>Roten</item>
+        <item>Roden</item>
+    </string-array>
+    <string-array name="Minimal_Pairs">
+        <item>Gold</item>
+        <item>Geld</item>
+        <item>Gilt</item>
+        <item>Galt</item>
+        <item>Brut</item>
+        <item>Brot</item>
+        <item>Briet</item>
+        <item>Brät</item>
+        <item>Gras</item>
+        <item>Gries</item>
+        <item>Groß</item>
+        <item>Gruß</item>
+        <item>Lasst</item>
+        <item>List</item>
+        <item>Lust</item>
+        <item>Lässt</item>
+        <item>Hass</item>
+        <item>Pass</item>
+        <item>Fass</item>
+        <item>Nass</item>
+        <item>Band</item>
+        <item>Sand</item>
+        <item>Land</item>
+        <item>Wand</item>
+        <item>Schau</item>
+        <item>Tau</item>
+        <item>Bau</item>
+        <item>Rau</item>
+        <item>Bund</item>
+        <item>Fund</item>
+        <item>Rund</item>
+        <item>Mund</item>
+        <item>See</item>
+        <item>Reh</item>
+        <item>Tee</item>
+        <item>Weh</item>
+        <item>Nord</item>
+        <item>Wort</item>
+        <item>Dort</item>
+        <item>Fort</item>
+        <item>Bebt</item>
+        <item>Hebt</item>
+        <item>Gebt</item>
+        <item>Lebt</item>
+        <item>Lacht</item>
+        <item>Schacht</item>
+        <item>Nacht</item>
+        <item>Macht</item>
+        <item>Laut</item>
+        <item>Schaut</item>
+        <item>Baut</item>
+        <item>Haut</item>
+        <item>Rann</item>
+        <item>Mann</item>
+        <item>Dann</item>
+        <item>Wann</item>
+        <item>Keilen</item>
+        <item>Keimen</item>
+        <item>Keinen</item>
+        <item>Keifen</item>
+        <item>Leider</item>
+        <item>Leiter</item>
+        <item>Leiser</item>
+        <item>Leiber</item>
+        <item>Hatte</item>
+        <item>Hange</item>
+        <item>Hacke</item>
+        <item>Hasche</item>
+        <item>Biegen</item>
+        <item>Biesen</item>
+        <item>Bieren</item>
+        <item>Bieten</item>
+        <item>Packe</item>
+        <item>Pappe</item>
+        <item>Panne</item>
+        <item>Passe</item>
+        <item>Säure</item>
+        <item>Säule</item>
+        <item>Seuche</item>
+        <item>Säume</item>
+        <item>Eine</item>
+        <item>Eile</item>
+        <item>Eiche</item>
+        <item>Eide</item>
+        <item>Baus</item>
+        <item>Bauch</item>
+        <item>Baut</item>
+        <item>Baum</item>
+        <item>Dann</item>
+        <item>Dass</item>
+        <item>Dach</item>
+        <item>Damm</item>
+        <item>Flur</item>
+        <item>Flug</item>
+        <item>Fluch</item>
+        <item>Flut</item>
+        <item>Weichen</item>
+        <item>Weichem</item>
+        <item>Weicher</item>
+        <item>Weiches</item>
+        <item>Weiter</item>
+        <item>Weitem</item>
+        <item>Weiten</item>
+        <item>Weites</item>
+        <item>Zehntel</item>
+        <item>Zehnter</item>
+        <item>Zehntes</item>
+        <item>Zehnten</item>
+        <item>Steiles</item>
+        <item>Steilen</item>
+        <item>Steilem</item>
+        <item>Steiler</item>
+        <item>Einen</item>
+        <item>Einem</item>
+        <item>Einer</item>
+        <item>Eines</item>
+        <item>Fetten</item>
+        <item>Fettes</item>
+        <item>Fettet</item>
+        <item>Fetter</item>
+        <item>Helles</item>
+        <item>Hellem</item>
+        <item>Hellen</item>
+        <item>Heller</item>
+        <item>Lasten</item>
+        <item>Rasten</item>
+        <item>Tasten</item>
+        <item>Masten</item>
+        <item>Schabe</item>
+        <item>Habe</item>
+        <item>Gabe</item>
+        <item>Wabe</item>
+        <item>Rache</item>
+        <item>Sache</item>
+        <item>Lache</item>
+        <item>Wache</item>
+        <item>Richten</item>
+        <item>Fichten</item>
+        <item>Nichten</item>
+        <item>Schichten</item>
+        <item>Landen</item>
+        <item>Banden</item>
+        <item>Fanden</item>
+        <item>Randen</item>
+        <item>Hose</item>
+        <item>Rose</item>
+        <item>Lose</item>
+        <item>Dose</item>
+        <item>Sage</item>
+        <item>Tage</item>
+        <item>Lage</item>
+        <item>Jage</item>
+        <item>Dritter</item>
+        <item>Drittem</item>
+        <item>Dritten</item>
+        <item>Drittel</item>
+        <item>Steilen</item>
+        <item>Steiles</item>
+        <item>Steilem</item>
+        <item>Steiler</item>
+        <item>Siegel</item>
+        <item>Sieger</item>
+        <item>Siegen</item>
+        <item>Sieges</item>
+        <item>Ring</item>
+        <item>Riss</item>
+        <item>Ritt</item>
+        <item>Riff</item>
+        <item>Lieb</item>
+        <item>Lied</item>
+        <item>Lies</item>
+        <item>Lief</item>
+        <item>Lot</item>
+        <item>Lohn</item>
+        <item>Lob</item>
+        <item>Los</item>
+        <item>Reich</item>
+        <item>Reif</item>
+        <item>Reis</item>
+        <item>Rein</item>
+        <item>Stab</item>
+        <item>Staat</item>
+        <item>Stahl</item>
+        <item>Stach</item>
+        <item>Weit</item>
+        <item>Weil</item>
+        <item>Wein</item>
+        <item>Weich</item>
+        <item>Huhn</item>
+        <item>Hub</item>
+        <item>Huf</item>
+        <item>Hut</item>
+        <item>Rausch</item>
+        <item>Rauch</item>
+        <item>Raum</item>
+        <item>Raub</item>
+        <item>Stieg</item>
+        <item>Stier</item>
+        <item>Stieb</item>
+        <item>Stieß</item>
+        <item>Heuen</item>
+        <item>Scheuen</item>
+        <item>Reuen</item>
+        <item>Neuen</item>
+    </string-array>
 </resources>
