--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">CIT-APP</string>
+    <string name="Training_Set">Training Set</string>
+    <string name="Exercises">Exercises</string>
+    <string name="Settings">Settings</string>
+    <string name="Motivation">Good Job!</string>
+    <string name="Done">Done</string>
+    <string name="Again">Again</string>
+    <string name="ExplanationMinPairs2">Select the word you heard</string>
     <string-array name="Exercises">
         <item>Minimal pairs</item>
         <item>Minimal pairs 2</item>
