--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Done">Done</string>
     <string name="Again">Again</string>
     <string name="ExplanationMinPairs2">Select the word you heard</string>
+    <string name="ExplanationRepetition">Please repeat the word PETAKA as many times as possible</string>
     <string-array name="Exercises">
         <item>Minimal pairs</item>
         <item>Minimal pairs 2</item>
