[mod] removed instructions from exercises and added them to instructions, just video instruction left to do. Also added picture description, recording of voice missing.

--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -6,12 +6,20 @@
     <string name="Motivation">Good Job!</string>
     <string name="Done">Done</string>
     <string name="Again">Again</string>
-    <string name="ExplanationMinPairs2">Select the word you heard</string>
-    <string name="ExplanationRepetition">Please repeat the word PETAKA as many times as possible</string>
+    <string name="DescriptionMinPairs2">Select the word you heard</string>
+    <string name="ExplanationMinPairs2">Press the listen button to hear a word. Then click the button with the name of the word you heard.</string>
+    <string name="DescriptionSyllableRepetition">word repetition</string>
+    <string name="ExplanationSyllableRepetition">Please repeat the word PETAKA as many times as possible. Press the start button when you are ready.</string>
+    <string name="DescriptionMinPairs">Say the word you heard</string>
     <string name="ExplanationMinPairs">Press the listen button to listen to the word, then press the record button and repeat the word you heard </string>
+    <string name="DescriptionWordList">word repetition</string>
     <string name="ExplanationWordList">Press the record button, then repeat the word shown in the middle </string>
     <string name="Listen">listen</string>
     <string name="record">record</string>
+    <string name="DescriptionPictureDescription">picture description</string>
+    <string name="ExplanationPictureDescription">Please press the record button and then start describing the picture below. When you are finished press the button below again.</string>
+    <string name="DescriptionSentenceReading">Read the sentence</string>
+    <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the start button when you are ready.</string>
     <string-array name="Exercises">
         <item>Minimal pairs</item>
         <item>Minimal pairs 2</item>
