--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -7,10 +7,18 @@
     <string name="Motivation">Gut Gemacht!</string>
     <string name="Done">Fertig</string>
     <string name="Again">Nochmal</string>
-    <string name="ExplanationMinPairs2">Wählen sie das Wort, welches Sie gehört haben</string>
-    <string name="ExplanationRepetition">Bitte wiederholen Sie das Wort PETAKA so oft wie möglich</string>
-    <string name="ExplanationMinPairs">Drücken Sie den hören Knopf um das Wort zu hören, dann drücken Sie den aufnehmen Knopf und wiederholen Sie das gehörte Wort</string>
-    <string name="ExplanationWordList">Drücken Sie den aufnehmen Knopf und sage Sie danach das Wort, welches in der Mitte zu sehen is</string>
+    <string name="DescriptionMinPairs2">Wiederholen Sie das gehörte Wort</string>
+    <string name="ExplanationMinPairs2">Drücken Sie den hören Knopf um ein Wort zu hören. Drücken Sie dann den Knopf mit dem Wort das Sie gehört haben.</string>
+    <string name="DescriptionSyllableRepetition">Wortwiederholung</string>
+    <string name="ExplanationSyllableRepetition">Bitte wiederholen Sie das Wort PETAKA so oft wie möglich.</string>
+    <string name="DescriptionMinPairs">Wiederholen Sie das gehörte Wort</string>
+    <string name="ExplanationMinPairs">Drücken Sie den hören Knopf um das Wort zu hören, dann drücken Sie den aufnehmen Knopf und wiederholen Sie das gehörte Wort.</string>
+    <string name="DescriptionWordList">Wortwiederholung</string>
+    <string name="ExplanationWordList">Drücken Sie den aufnehmen Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is.</string>
     <string name="Listen">hören</string>
     <string name="record">aufnehmen</string>
+    <string name="DescriptionPictureDescription">Bildbeschreibung</string>
+    <string name="ExplanationPictureDescription">Bitte drücken Sie den aufnehmen Knopf und beginnen Sie das Bild zu beschreiben. Wenn Sie fertig sind drücken Sie den Knopf nochmal.</string>
+    <string name="DescriptionSentenceReading">Lesen Sie einen Satz</string>
+    <string name="ExplanationSentenceReading">Bitte lesen Sie den Satz auf dem Bildschirm. Drücken Sie auf aufnehmen, wenn Sie bereit sind.</string>
 </resources>
