[mod] visual update

--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -12,27 +12,54 @@
     <string name="DescriptionSyllableRepetition">Wortwiederholung</string>
     <string name="ExplanationSyllableRepetition">Bitte wiederholen Sie das Wort PATAKA so oft wie möglich. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind.</string>
     <string name="DescriptionMinPairs">Wiederholen Sie das gehörte Wort</string>
-    <string name="ExplanationMinPairs">Drücken Sie den \"hören\" Knopf um das Wort zu hören, drücken Sie dann den \"aufnehmen\" Knopf und wiederholen Sie das gehörte Wort. Wenn Sie fertig sind drücken Sie bitte den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
+    <string name="ExplanationMinPairs">Drücken Sie \"hören\" um ein Wort zu hören, drücken Sie dann \"aufnehmen\" und wiederholen Sie das gehörte Wort. Drücken Sie danach \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
     <string name="DescriptionWordList">Wortwiederholung</string>
-    <string name="ExplanationWordList">Drücken Sie den \"aufnehmen\" Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is. Wenn Sie fertig sind drücken Sie bitte den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
+    <string name="ExplanationWordList">Drücken Sie den \"aufnehmen\" Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
     <string name="Listen">hören</string>
     <string name="record">aufnehmen</string>
     <string name="DescriptionPictureDescription">Bildbeschreibung</string>
-    <string name="ExplanationPictureDescription">Bitte drücken Sie den \"aufnehmen\" Knopf und beginnen Sie das Bild zu beschreiben. Wenn Sie fertig sind drücken Sie bitte den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
+    <string name="ExplanationPictureDescription">Bitte drücken Sie den \"aufnehmen\" Knopf und beginnen Sie das Bild zu beschreiben. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
     <string name="DescriptionSentenceReading">Lesen Sie einen Satz</string>
-    <string name="ExplanationSentenceReading">Bitte lesen Sie den Satz auf dem Bildschirm. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind. Wenn Sie fertig sind drücken Sie bitte den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
+    <string name="ExplanationSentenceReading">Bitte lesen Sie den Satz auf dem Bildschirm. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
     <string name="MinimalPairs">Minimalpaare</string>
     <string name="MinimalPairs2">Minimalpaare2</string>
     <string name="WordList">Wortliste</string>
     <string name="PictureDescription">Bildbeschreibung</string>
     <string name="SentenceReading">Sätze lesen</string>
     <string name="SyllableRepetition">Silben wiederholen</string>
+    <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Ihre Sprechfertigkeit, sowie Ihre Fähigkeit zu Hören zu testen. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen. Die Übungen testen verschiedene Bereiche Ihrer Sprache, wie zum Beispiel die Sprechgeschwindigkeit und die Betonung, oder auch Ihre Fähigkeit zu Hören. Die App bietet eine Evaluation der Ergebnisse an, mit welcher Sie Ihren Fortschritt über die Zeit begutachten können. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen. Los gehts !</string>
     <string name="startExercise">START</string>
+    <string name="back">zurück</string>
+    <string name="ready">fertig</string>
+    <string name="name">Name</string>
+    <string name="male">Männlich</string>
+    <string name="trainingSetButton">Übungseinheit\nDas ist eine Reihe an Übungen die Sie täglich machen sollten.\nStarten Sie jetzt !</string>
+    <string name="female">Weiblich</string>
+    <string name="mainTitle">Cochlear-Implantat-Test-App</string>
+    <string name="divers">Divers</string>
+    <string name="right">rechts</string>
+    <string name="left">links</string>
+    <string name="both">beides</string>
+    <string name="sex">Geschlecht</string>
+    <string name="smoker">Raucher</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nein</string>
+    <string name="save">speichern</string>
+    <string name="cochlearImplant">Cochlear Implantat</string>
+    <string name="hearingAid">Hörgerät</string>
+    <string name="typeOfImplant">Art des Implantats</string>
+    <string name="sideOfImplant">Seite des Implantats</string>
+    <string name="birthdate">Geburtsdatum</string>
+    <string name="phoneNumber">Telefon Nummer</string>
     <string name="recording">aufnahme läuft ...</string>
     <string name="trainingsetTitle">Übungseinheit</string>
     <string name="listEmpty">Alle Übungen für heute fertig.</string>
     <string name="user_empty">Bitte geben Sie Ihren Benutzernamen ein</string>
     <string name="userid_empty">Bitte geben Sie Ihre Telefonnummer ein</string>
+    <string name="dailyEvaluation">Ergebnis/Tag</string>
+    <string name="evaluationOverTime">Ergebnis/Jahr</string>
+    <string name="mainPage">Start</string>
+    <string name="exerciseList">Übungen</string>
     <string name="settings">Einstellungen</string>
     <string-array name="Exercises">
         <item>Minimalpaare</item>
