--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -11,27 +11,54 @@
     <string name="DescriptionSyllableRepetition">word repetition</string>
     <string name="ExplanationSyllableRepetition">Please repeat the word PATAKA as many times as possible. Press \"record\" when you are ready.</string>
     <string name="DescriptionMinPairs">Say the word you heard</string>
-    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to the word, then press the \"record\" button and repeat the word you heard. After you finished repeating the word, press the \"recording ...\" button to stop the recording. </string>
+    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to a word, then press the \"record\" button and repeat the word you heard. Press the \"recording ...\" button when you are done. </string>
     <string name="DescriptionWordList">word repetition</string>
-    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. After you finished repeating the word, press the \"recording ...\" button to stop the recording. </string>
+    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. Press the \"recording ...\" button when you are done. </string>
     <string name="Listen">listen</string>
     <string name="record">record</string>
     <string name="DescriptionPictureDescription">picture description</string>
-    <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture below. When you are finished press the \"recording ...\" button.</string>
+    <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture below. Press the \"recording ...\" button when you are done.</string>
     <string name="DescriptionSentenceReading">Read the sentence</string>
-    <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. When you are finished press the \"recording ...\" button.</string>
+    <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. Press the \"recording ...\" button when you are done.</string>
     <string name="MinimalPairs">Minimal pairs</string>
     <string name="MinimalPairs2">Minimal pairs 2</string>
     <string name="WordList">Word list</string>
     <string name="PictureDescription">Picture description</string>
     <string name="SentenceReading">Sentence reading</string>
     <string name="SyllableRepetition">Syllable repetition</string>
+    <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to measure your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, which are used to evaluate the speaking rate and the intonation of your voice as well as your hearing ability. The app will provide you with an evaluation system, where you can check your results and see your improvements over time. Now press the start button below to start creating your profile for using this app. Let´s go !</string>
     <string name="startExercise">START</string>
+    <string name="back">back</string>
+    <string name="ready">ready</string>
+    <string name="save">save</string>
+    <string name="mainTitle">Cochlear-Implant-Testing-App</string>
+    <string name="trainingSetButton">Trainingset\nThis is a set of exercises you should complete every day.\nStart now!</string>
+    <string name="name">name</string>
+    <string name="sex">sex</string>
+    <string name="male">male</string>
+    <string name="female">female</string>
+    <string name="divers">divers</string>
+    <string name="right">right</string>
+    <string name="left">left</string>
+    <string name="both">both</string>
+    <string name="smoker">Smoker</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
+    <string name="cochlearImplant">Cochlear Implant</string>
+    <string name="hearingAid">Hearing Aid</string>
+    <string name="typeOfImplant">typeOfImplant</string>
+    <string name="sideOfImplant">side of implant</string>
+    <string name="birthdate">birthdate</string>
+    <string name="phoneNumber">phone number</string>
     <string name="recording">recording ...</string>
     <string name="trainingsetTitle">Trainingset</string>
     <string name="listEmpty">Nothing left to do today.</string>
     <string name="user_empty">please enter your username</string>
     <string name="userid_empty">please enter your phone number</string>
+    <string name="dailyEvaluation">results/day</string>
+    <string name="evaluationOverTime">results/year</string>
+    <string name="mainPage">mainpage</string>
+    <string name="exerciseList">exercises</string>
     <string name="settings">Settings</string>
     <string-array name="Sentences">
         <item>Peter spielt auf der Strasse</item>
@@ -457,4 +484,14 @@
         <item>Neuen</item>
     </string-array>
     <string name="title_activity_main" translatable="false">MainActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_results_daily">ResultsDaily</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="title_activity_results_per_year">ResultsPerYear</string>
+    <string name="title_activity_results_per_day">ResultsPerDay</string>
 </resources>
